<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CurrencyExchange</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_name">Currency: UNK</string>
    <string name="start_rate">Start: 00.00</string>
    <string name="end_rate">End: 00.00</string>
    <string name="change_rate">Change: 00.00</string>
    <string name="change_pct_rate">Change pct: 00.00</string>
    <string name="select_new_base_currency">Select new base currency</string>
    <string name="toolbar_info">You can change base currency\nby clicking on the currency icon</string>
    <string name="cant_select_more_currencies">You can\'t select more currencies</string>
    <string name="enter_value">Enter value:</string>
    <string name="convert">Convert</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="ok">OK</string>
    <string name="from_date" tools:ignore="TypographyDashes">From: 00–00-0000</string>
    <string name="to_date" tools:ignore="TypographyDashes">To: 00-00-0000</string>
    <string name="select_currencies_to_display_fluctuation">Select currencies to display fluctuation</string>
    <string name="save">Save</string>
    <string name="pick_date_to_display_historical_rates">Pick date to display historical rates</string>
    <string name="save_date">Save date</string>
    <string name="date" tools:ignore="TypographyDashes">Date: 0000–00-00</string>
    <string name="change_base_currency">Change base currency:</string>
    <string name="select_currencies">Select currencies</string>
    <string name="select_up_to_30_currencies">Select up to 30 currencies, and then, click on the save button</string>
    <string name="currency_item_name">UNK</string>
    <string name="currency_item_value">00.00</string>
    <string name="historical_fragment_name">Historical\nrates</string>
    <string name="latest_fragment_name">Latest\nrates</string>
    <string name="conversion_fragment_name">Conversion</string>
    <string name="fluctuation_fragment_name">Fluctuation\nrates</string>
    <string name="change_base_content_description">By clicking on the currency icon, you can change your base currency</string>
    <string name="select_desired_currency">You have to select desired currency, and enter amount to exchange</string>
    <string name="select_at_least_one_currency">In order to display chart, you have to select at least one currency</string>
    <string name="base_currency_unk">Base currency UNK</string>
    <string name="rates_from_date">Rates from\n %1$s</string>
    <string name="pick_7_currencies">Pick up to 7 currencies, and click on the save button to display data</string>
    <string name="proceed">Proceed</string>
    <string name="timeseries_info">Select start, and end date of desired time series, to display data.</string>

    <!--  String resources with specific format  -->
    <string name="formatted_base_currency">Base currency: %1$s</string>
    <string name="formatted_date">Date: %1$s</string>
    <string name="formatted_from">From: %1$s</string>
    <string name="formatted_to">To: %1$s</string>
    <string name="formatted_start_rate">Start: %1$.2f</string>
    <string name="formatted_end_rate">End: %1$.2f</string>
    <string name="formatted_change_rate">Change: %1$.2f</string>
    <string name="formatted_change_pct">Change PCT: %1$.2f</string>
    <string name="formatted_you_will_receive">You will receive: %1$.2f %2$s</string>
    <string name="formatted_current_base">Current base currency: %1$s</string>
    <string name="no_network_sign">:(</string>
    <string name="no_network_explanation">When application is just installed, it requires internet connection to fill database with data about specific currency. Please, provide internet connection.</string>
    <string name="no_network_after_changing_base">Provide internet connection in order to use this currency.</string>
    <string name="no_network_explanation_historical_fluctuation">This mode can\'t be used without internet connection.</string>
    <string name="time_series">Time\nSeries</string>
    <string name="timeout_explanation">App couldn\'t connect with the server this time. Please, restart the app</string>
    <string name="conversion_enter_amount">Enter amount to convert</string>
    <string name="conversion_from">From: UNK</string>
    <string name="conversion_to">To: UNK</string>
</resources>