<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HistoricalRates"
    android:background="#F9F5E7"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/historical_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#EDDBC7">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/historical_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historical_fragment_name"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="#605C54"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_info"
                android:textSize="15sp"
                android:layout_marginStart="28dp"
                android:textAlignment="center"
                android:textColor="#605C54"/>

            <ImageView
                android:id="@+id/historical_change_base_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/currency_exchange"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/change_base_content_description"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/historical_refresh_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/historical_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorColor="#EDDBC7"
                app:indicatorSize="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackColor="#F8EAD8"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/historical_no_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/no_network_explanation_historical_fluctuation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:textColor="#605C54"/>

            <!--    First layout pick date-->
            <TextView
                android:id="@+id/historical_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/pick_date_to_display_historical_rates"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#302E2A"
                />

            <DatePicker
                android:id="@+id/historical_dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/historical_info" />

            <Button
                android:id="@+id/historical_save_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/save_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/historical_dt"
                android:background="@drawable/rounded_view"
                android:textColor="#302E2A"/>


<!--            Second layout (select symbols)-->

                <TextView
                    android:id="@+id/historical_base_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/currency_name"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:textColor="#302E2A"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/historical_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/historical_base_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="#302E2A"/>

                <TextView
                    android:id="@+id/historical_change_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/change_base_currency"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/historical_base_tv"
                    android:textColor="#302E2A"/>

                <Spinner
                    android:id="@+id/historical_change_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="22dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/historical_date_tv" />

                <TextView
                    android:id="@+id/historical_select_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/select_currencies"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/historical_change_info"
                    android:textColor="#302E2A"/>


                <ListView
                    android:id="@+id/historical_symbols_lv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/historical_save_symbols"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/historical_select_info" />

                <Button
                    android:id="@+id/historical_save_symbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="56dp"
                    android:background="@drawable/rounded_view"
                    android:textColor="#302E2A"/>

                <!--  Third layout  RecyclerView-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historical_rv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/historical_base_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
