<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TimeSeries">

    <!--Custom toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/time_series_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#ff44">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/time_series_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_series"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/toolbar_info"
                android:textAlignment="center"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/time_series_change_base_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/change_base_content_description"
                app:srcCompat="@drawable/currency_exchange" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/time_series_refresh_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time_series_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/time_series_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_network_explanation_historical_fluctuation"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!--First part (picking start/end date)-->
        <TextView
            android:id="@+id/time_series_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select start, and end date of desired time series, to display data."
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

                    <DatePicker
                        android:id="@+id/time_series_start_dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_series_info"
                        android:visibility="invisible"/>

                    <Button
                        android:id="@+id/time_series_start_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Proceed"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_series_start_dp"
                        android:visibility="invisible"/>

                    <DatePicker
                        android:id="@+id/time_series_end_dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_series_info"
                        android:visibility="invisible"/>

                    <Button
                        android:id="@+id/time_series_end_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Proceed"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_series_end_dp"
                        android:visibility="invisible"/>

                    <!--Second part (picking currencies/changing the base currency)-->
                    <TextView
                        android:id="@+id/time_series_base_currency_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/currency_name"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="invisible"/>

                    <Spinner
                        android:id="@+id/time_series_select_base_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="17dp"
                        app:layout_constraintStart_toEndOf="@id/time_series_base_currency_tv"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="invisible"/>


                    <TextView
                        android:id="@+id/time_series_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/from"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_series_base_currency_tv"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/time_series_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/to"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_series_start_date"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/time_series_select_symbols_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/select_currencies_to_display_fluctuation"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/time_series_end_date"
                        android:visibility="invisible"/>


                    <ListView
                        android:id="@+id/time_series_select_symbols_lv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toTopOf="@id/time_series_save_symbols"
                        app:layout_constraintTop_toBottomOf="@id/time_series_select_symbols_tv"
                        android:visibility="invisible"/>

                    <Button
                        android:id="@+id/time_series_save_symbols"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="58dp"
                        android:text="@string/save"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:visibility="invisible"/>


                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/time_series_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible"
                        android:layout_marginBottom="58dp"
                        app:layout_constraintTop_toBottomOf="@id/time_series_start_date"
                        />
    </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
